# youtube-search

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  compose.env  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: deploy_backend.yml
alembic/: env.py
alembic/versions/: 7be3cb372b73_add_base_models.py  bef8379aa5b0_add_category_to_video_model.py  d352fb7a0b14_add_base_models.py  f6d1affdf179_add_base_models.py
ansible/: deploy.yml  hosts
ansible/group_vars/: all.yaml  stage.yaml
ansible/tasks/: compose.yml  docker_login.yml
ansible/templates/: docker-compose.yml.j2  env.j2
app/: container.py  main.py  prerun.py
app/alembic/: env.py
app/alembic/versions/: 7be3cb372b73_add_base_models.py
app/api/v1/: api.py
app/api/v1/endpoints/: channels.py  example.py  videos.py
app/core/: config.py
app/db/: base.py  init_db.py  session.py
app/fixtures/elastic/: elastic_language_analyzers.json  lang_code_to_analyzer.json
app/models/: base.py
app/schemas/: example.py  search_result.py
app/scripts/: deduplicate_elasticsearch.py
app/services/elastic/: subtitles.py
app/services/search/: base.py
app/services/search/elastic/: subtitles.py
app/services/youtube/: entities.py  videos.py
app/tasks/: async_tasks.py  main.py  periodic_tasks.py
app/tests/: conftest.py
app/tests/services/youtube/: conftest.py  subtitles_tests.py
app/tests/usecases/: subtitles_tests.py
app/usecases/: search.py  subtitles.py
