[tool.poetry]
name = "youtube-search"
version = "0.1.0"
description = ""
authors = ["Andrew Klyuchnikov <off-rey@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standart"], version = "^0.22.0"}
asyncpg = "^0.27.0"
alembic = "^1.10.4"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.11"}
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
psycopg2-binary = "^2.9.6"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
