[tool.poetry]
name = "youtube-search"
version = "0.1.0"
description = ""
authors = ["Andrew Klyuchnikov <off-rey@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standart"], version = "^0.22.0"}
asyncpg = "^0.27.0"
alembic = "^1.10.4"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.11"}
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
psycopg2-binary = "^2.9.6"
celery = {extras = ["redis"], version = "^5.2.7"}
google-api-python-client = "^2.86.0"
beautifulsoup4 = "^4.12.2"
youtube-transcript-api = "^0.6.0"
sqlalchemy-stubs = "^0.4"
httpx = "^0.24.0"
asynctest = "^0.13.0"
elasticsearch = {extras = ["async"], version = "^8.7.0"}
retry = "^0.9.2"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
